--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_URL=http://localhost:3000
+VITE_API_URL=http://localhost:8080
 VITE_API_TIMEOUT=30000
 
 # Application Configuration
@@ -9,4 +9,7 @@ VITE_ALLOWED_FILE_TYPES=pdf,doc,docx,txt
 
 # Feature Flags
 VITE_ENABLE_ANALYTICS=false
-VITE_ENABLE_DEBUG_MODE=false 
+VITE_ENABLE_DEBUG_MODE=false
+
+# Clerk Authentication
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_your_publishable_key_here 
