--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.25.2",
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.69.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
